--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    line-height: 1.4;
+    color: #444;
+    background: #fff;
+    height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.inner {
+    width: 100%;
+    padding: 8rem 10px 4rem;
+}
+
+.form-container {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.input-text {
+    flex: 7.5;
+    font-size: 1rem;
+    padding: 0px 15px;
+    border: 1px solid #f0f0f0;
+    font-weight: 400;
+    max-width: 80%;
+    margin-right: 10px;
+    padding: 0 15px;
+}
+
+.input-text::placeholder {
+    color: #000;
+}
+
+.input-submit {
+    flex: 2.5;
+    border: none;
+    background: #d7d7d7;
+    color: #5b5b5b;
+    text-transform: capitalize;
+    cursor: pointer;
+    font-weight: 600;
+    width: 20%;
+}
+
+.input-text,
+.input-submit {
+    height: 45px;
+    outline: none;
+    box-shadow: 0 1px 6px 0 rgba(168, 167, 167, 0.28);
+    border-radius: calc(0.5 * 100px);
+}
+
+
+.active-link {
+    color: orangered;
+    text-decoration: underline;
+}
+
+/* Navbar */
+.navBar {
+    position: relative;
+}
+
+.navBar button {
+    position: fixed;
+    left: 40px;
+    top: 40px;
+    z-index: 10;
+    cursor: pointer;
+    border: none;
+}
+
+.menuNav {
+    overflow-y: scroll;
+    list-style: none;
+    position: fixed;
+    top: 0;
+    background: darkcyan;
+    left: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 0;
+    overflow: hidden;
+    max-width: 290px;
+    z-index: 9;
+}
+
+.menuNav.showMenu {
+    width: 100%;
+}
+
+a {
+    display: block;
+    padding: 10px 40px;
+    text-decoration: none;
+    color: #3fffd2;
+    text-transform: lowercase;
+    font-weight: bold;
+}
+
+.menuNav li:first-child {
+    margin-top: 7rem;
+}
+
+/* about page */
+
+.about__content {
+    padding: 8rem 40px;
+    display: flex;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .about__list {
+    list-style: none;
+    flex: 2;
+    margin-right: 15px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .about__list a {
+    color: #9f9f9f;
+    text-transform: capitalize;
+    padding: 20px 0;
+    font-weight: 600;
   }
-}
+  
+  .about__list a:hover {
+    color: #000;
+  }
+  
+  .main__content {
+    flex: 7;
+  }
+  
+  .main__content h1 {
+    margin-bottom: 15px;
+    line-height: 30px;
+    font-size: 30px;
+  }
+  
+  .main__content p {
+    line-height: 25px;
+  }
